# grass-chopper

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  TODO.md  init-project-prompt.md  run_sim.sh  setup.yaml
docs/: 3d-printing-guide.md  architecture.md  nav2-visual-test.md  phase5-hardware-migration.md  phase5-step-by-step.md  related-projects-survey.md  roadmap.md  (+2 more)
weeder_ws/src/grass_chopper/: package.xml  setup.cfg  setup.py
weeder_ws/src/grass_chopper/config/: apriltag_params.yaml  battery_params.yaml  collision_monitor_params.yaml  coverage_obstacles_params.yaml  coverage_params.yaml  docking_params.yaml  docking_server_params.yaml  incline_params.yaml  mapper_params_online_async.yaml  mission_params.yaml  nav2_params.yaml  twist_mux_params.yaml  weeder_params.yaml
weeder_ws/src/grass_chopper/grass_chopper/: battery_sim_node.py  battery_simulator.py  coverage_commander_node.py  coverage_planner.py  coverage_tracker.py  coverage_tracker_node.py  docking_behavior.py  incline_monitor.py  incline_monitor_node.py  map_region_detector.py  mission_behaviors.py  mission_tree_node.py  obstacle_avoidance.py  pico_protocol.py  serial_bridge.py  weeder_node.py
weeder_ws/src/grass_chopper/launch/: docking_launch.py  nav2_launch.py  robot_launch.py  sim_launch.py
weeder_ws/src/grass_chopper/models/apriltag_dock/: model.config  model.sdf
weeder_ws/src/grass_chopper/test/: test_battery_simulator.py  test_coverage_planner.py  test_coverage_tracker.py  test_docking_behavior.py  test_incline_monitor.py  test_map_region_detector.py  test_mission_behaviors.py  test_obstacle_avoidance.py  test_pico_protocol.py  test_serial_bridge.py  test_weeder_node.py
weeder_ws/src/grass_chopper/urdf/: robot_description.urdf.xacro
weeder_ws/src/grass_chopper/worlds/: coverage_obstacles.world  coverage_test.world  docking_test.world  dynamic_obstacles.world  obstacles.world  slam_test.world  slope_test.world
(+13 files in other folders)
